<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:barrierAllowsGoneWidgets="true"
    android:fillViewport="true"
    android:overScrollMode="never">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        tools:context="edu.salemstate.cs.advising.LoginActivity">


        <!-- Login button frame -->
        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:background="@drawable/shadow_top_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Login button -->
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/loginbtn"
                android:onClick="checkLogin"
                android:src="@drawable/loginbtn"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame1"
                app:layout_constraintVertical_bias="1.0" />

        </FrameLayout>


        <!-- SSU ID text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputId"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:textColorHint="@color/white"
            android:theme="@style/LoginField"
            app:layout_constraintBottom_toTopOf="@+id/textInputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/SSUid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ssuId"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- SSU Email text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="0dp"
            android:layout_height="69dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="44dp"
            android:textColorHint="@color/white"
            android:theme="@style/LoginField"
            app:layout_constraintBottom_toTopOf="@+id/frame1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/SSUemail"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/ssuEmail"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
            app:layout_constraintStart_toStartOf="@+id/textInputEmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


        <!-- Logo image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"/>

        <!-- Title text view -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@string/csDept"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <!-- Welcome message text view -->
        <TextView
            android:id="@+id/welcomemsg"
            android:layout_width="232dp"
            android:layout_height="67dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/welcomeAdvisee"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

